# Guitar-Bot

./: README.md
GuitarBot/: CMakeLists.txt
GuitarBot/include/: GuitarBot.h  GuitarEvent.h  GuitarTrack.h  MIDI_Reader.h  Midi_Parser.h  MotionGenerator.h  PandaArm.h  RightHandController.h  csvstream.h
GuitarBot/src/: GTab.cpp  GuitarBot.cpp  GuitarEvent.cpp  GuitarTrack.cpp  MIDI_Reader.cpp  MotionGenerator.cpp  PandaArm.cpp  RightHandController.cpp  main.cpp
MotorController/: CMakeLists.txt
MotorController/Include/: Definitions.h  MotorController.h  Striker.h
MotorController/Src/: MotorController.cpp  Striker.cpp
Rtpmidi/: CMakeLists.txt
Rtpmidi/include/: AvahiClient.h  EventCallback.h  rtpmidi.h
Rtpmidi/src/: rtpmidi.cpp
include/: Defines.h  Definitions.h  ErrorDef.h  Logger.h  Util.h  pch.h
